add install cdo

--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -160,7 +160,7 @@ type(var).__name__
 
 ### 保存图片超过固定边界时：
 
-```python
+```
 
 extent = ax4.get_window_extent().transformed(fig.dpi_scale_trans.inverted())
 fig.savefig(path_data +'/' + title +'.pdf',fomat='pdf',bbox_inches=extent.expanded(2.2, 1.4))
@@ -172,7 +172,7 @@ YOU CAN CHANGE THE FORMAT `pdf` TO `png` et al.
 
 ### 数据内部同样的数字个数：
 
-```python
+```
 sorted(X, key=X.__getitem__,reverse=True)
 ```
 
@@ -182,193 +182,16 @@ sorted(X, key=X.__getitem__,reverse=True)
 ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-setting-port:127.0.0.1:8889
 ```
 
-对于我现在的电脑来说，由于一些原因，不能够修改屏幕保护程序，在安装了cygwin terminal 后，我在后面加入了
-```bash
-#!/bin/bash
-x=1
-while [ $x -le 5 ]
-do
-  sl
-done
-```
-
-用以不停的开小火车，这样就可以达到显示屏不关。
-但是大家还是让显示屏休息一下比较好。
-
-
 
 # INSTALL STEAM ON FEDORA
 
-```bash
+```
 sudo dnf install fedora-workstation-repositories
 sudo dnf install -y steam --enablerepo=rpmfusion-nonfree-steam
 ```
-
-
-
-### 如何在二维平面判断任意两条曲线相交？
-
-* 首先假设两条曲线具有一一对应关系，比如
-$$
-y_1 = f_1(x_1)
-\\
-y_2 = f_2(x_2)
-$$
-	比如在地球物理学中，对应的台风（热带气旋、温带气旋、波破碎）路径往往是一个
-	纬度值$latitude$对应一个经度$longitude$，几乎不存在不同时刻涡旋经纬度不变的情况
-	也就是说可以对于路径来说可以近似表示为
-$$
-lat_1 = f_1(lon_1)
-\\
-lat_1 = f_1(lon_1)
-$$
-
-* 那么如何判断两个涡旋是否回相交？这里存在两种情况
-	* 其中一个路线固定，比如台风与海岸线的关系
-	* 另一种情况为两个台风相遇的问题
-
-	无论何种情形，解决思路大致相同，框架上主要是`一重循环`套`判断`
-
-* 首先设定判断两条曲线各个点比较的函数
-	$$
-	C=Sgn(f_1(x_1(t),t) - f_2(x_1(t),t))
-	$$
-	用来表示在某一个时刻，两条路径的中点的上下位置
-	注意连个`x`采用的是同一个值。
-	如果$C>0$那么$f_1$在$f_2$之上
-	如果$C<0$那么$f_1$在$f_2$之下
-* 这里比较的是两条曲线存在时间变化的情况，当其中一个是固定曲线，比如海岸线之于台风，那么就不存在变量`t`
-* 最后这里仅仅比较是否相交，并不比较存在几个焦点的情况，那么在后面加个`break`用以节省计算资源
-
-
-最后个人觉得这是个比较笨但是容易理解的方法，需要进一步提高计算能力
-
-
-```python
-# latsin and lonsin are baseline
-# latsin_ and lonsin_ are the transform-line
-var = []
-y,x = (latsin[1:] - latsin[:-1])/2, (lonsin[1:] - lonsin[:-1])/2
-a = y/x
-b = y - a*x
-y_, x_ = (latsin[1:] + latsin[:-1])/2, (lonsin[1:] + lonsin[:-1])/2
-judge = y > (a*x_ + b)
-if True in judge and False in judge
-	var.append([lonsin,latsin])
-```
-
-* 这里的代码并没有编译或者debug，细节需要精修
-
-
-### 点到任意一条曲线之间距离最短
-
-* 首先假设有一条曲线$y = f(x)$
-* 曲线外不相交的一点为$A(x_0,y_0)$
-* 数学上：
-	* 首先对曲线求导，求出每个点所对应的切线的斜率
-	* 接着计算所在点切线的垂线是否与所求$A$点相交
-* 或者我们可以直接计算曲线上每个点与$A$之间的距离
-	* 这个方法主要适用于曲线上存在有限个点的情况
-	* 比如，台风登陆我国，海岸线上的观测站就是有限的
-
-
-
-
-
-#### 在地球上测量两点之间的距离
-
-
-[Geopy](https://www.osgeo.cn/geopy/)可以用 geodesic distance 或 great-circle distance ，默认测地线距离作为函数geopy.distance.distance
-
-大圆距离（ great_circle ）使用地球的球形模型，使用国际大地测量学和地球物理学联合会定义的平均地球半径，（2）a + b) /3=6371.0087714150598公里，约6371.009公里（WGS-84），**误差高达0.5%**。半径值存储在 distance.EARTH_RADIUS ，因此可以对其进行自定义（但是，它应该始终以公里为单位）。
-
-测地距离是地球椭球面模型表面上最短的距离。默认算法使用的方法是 Karney (2013) (geodesic) ；这是精确的四舍五入并始终收敛。年长的 deprecated 方法由于 Vincenty (1975) (vincenty) 也可用；这仅精确到0.2 mm，距离计算无法收敛到几乎相反的点。
-
-* meters 米(简写m)
-* kilometers 千米(简写km)
-* miles 英里(简写mi)
-* nautical 海里(简写nm)
-* feet 英尺(简写ft)
-
-
-
-
-#### time.clock
-
-module ‘time’ has no attribute ‘clock’
-time.clock（）已经在新的版本中移除了。在Python3.8中更新了。“The function time.clock() has been removed, after having been deprecated since Python 3.3: use time.perf_counter() or time.process_time() instead, depending on your requirements, to have well-defined behavior. (Contributed by Matthias Bussonnier in bpo-36895.)”
-
-### LaTex 命令总结
-
-转自[樱花赞](https://www.cnblogs.com/1024th/)
-[地址](https://www.cnblogs.com/1024th/p/11623258.html)
-
-
-
-### python 读取grib2二进制文件：
-
-
-```python
-
-# install xarray and cfgrib
-# 1. !conda install -c conda-forge cfgrib
-#    !conda install - c conda-forge eccodes
-#    !pip install cfgrib - -user
-# 2. in windows the environment should be update
-#   if you use vscode, the path should be added in settings.json
-#   "ECCODES_DEFINITION_PATH": "D:\\Users\\Lynie\\anaconda3\\Library\\share\\eccodes\\definitions"
-# the path should be different depend on the install path
-# then you can compile the code BELOW
-# SOMETIME WILL HAVE ERROR OR WARNING, DO NOT MIND 
-# CHECK http://xarray.pydata.org/en/stable/generated/xarray.open_dataset.html
-# 
-
-
-
-import os
-os.environ["ECCODES_DEFINITION_PATH"] = "D:\\Users\\USERNAME\\anaconda3\\Library\\share\\eccodes\\definitions"
-import xarray as xr
-import cfgrib
-ds = xr.open_dataset(
-    'YOUR FILE.BIN', 'rb',engine='cfgrib', backend_kwargs={'filter_by_keys': {'stepType': 'instant', 'typeOfLevel': 'surface'}})
-print(ds)
-
+# INSTALL `cdo` IN MAC
 
 ```
-
-
-
-### 获得中国各省的边界数据
-1. 进入[网址](https://datav.aliyun.com/tools/atlas/)选择需要的省
-2. 下载`geojson`文件， 或者复制`.json`文件的地址到浏览器，出现的数据就是边界数据
-3. （可选择）进入网址[https://mapshaper.org/](https://mapshaper.org/)导入`.json`文件，导出`.shp`文件
-4. 画图叠加
-
-
-
-### 直角坐标插值到极坐标
-
-#### MATLAB
-
+sudo port install cdo
 ```
-[X,Y] = meshgrid((lonsin - lon0),(latsin - lat0));
-[x2, y2] = meshgrid(r1,theta1);
-S = scatteredInterpolant(X(:),Y(:),V(:));
-```
-
-#### Python
-
-```
-thetai,ri  = 1,1 # this is the angle/length interval unit should be degree/km
-r          = np.arange(0,r/1e3 + 1e-100, ri)
-theta      = np.arange(0,theta + 1e-100, thetai)
-xx,yy      = np.meshgrid(r,theta)
-points_cat = np.concatenate([np.array(lons_).reshape(-1,1), np.array(lats_).reshape(-1,1)], axis=1)
-points_pol = np.concatenate([np.array(xx).reshape(-1,1), np.array(yy).reshape(-1,1)], axis=1)
-zi         = interpolate.griddata(points_cat, var.flatten(), points_pol, method='cubic')
-f          = zi.reshape((len(theta),len(r)))
-```
-
-
-
-
+reference:[cdo](https://web.northeastern.edu/sds/ClimateDOC/documents/How%20to%20Install%20CDO%20on%20Mac.pdf)
